# sdd-workshop

./: .coverage  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
cli/: formatters.py  main.py
specs/001-cli-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cli-todo-app/checklists/: requirements.md
specs/001-cli-todo-app/contracts/: cli-contract.md
specs/002-todo-tag-feature/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-todo-tag-feature/checklists/: requirements.md
specs/002-todo-tag-feature/contracts/: cli-contract.md
tests/: conftest.py
tests/contract/: test_cli_contract.py
tests/integration/: test_cli_add.py  test_cli_delete.py  test_cli_done.py  test_cli_list.py  test_foundation_db_path.py
tests/unit/: test_add_todo.py  test_db_migration.py  test_delete_todo.py  test_foundation_validation.py  test_list_todos.py  test_mark_done.py  test_tag_validation.py
todo_lib/: db.py  models.py  repository.py  services.py
