[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todo-cli"
version = "0.1.0"
description = "로컬 CLI ToDo 관리 도구"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "sqlalchemy>=2.0.0",
]

[project.scripts]
todo = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["todo_lib", "cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=todo_lib --cov=cli --cov-report=term-missing --cov-fail-under=90"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
